@@ -50,6 +50,8 @@ module.exports.mw = require('./rlib');
 module.exports.errors = require('./errors');
 
 function Restiq( opts ) {
+    if (this === global || !this) return Restiq.createServer(opts);
+
     this._opts = opts || {};
     this._emulateRestify = this._opts.restify;
     this._setNoDelay = this._opts.setNoDelay;
@@ -75,6 +77,9 @@ function Restiq( opts ) {
         var restify = require('./qrestify');
         this._before.push(restify.emulateRestify);
     }
+
+    // disable listen on new Restiq() to allow using Restiq() as an app builder
+    this.listen = function() { throw new Error("new Restiq() cannot listen, use Restiq.createServer()"); }
 }
 util.inherits(Restiq, EventEmitter);
 
@@ -113,6 +118,9 @@ Restiq.createServer = function createServer( opts ) {
         if (opts.createServer) createServer = opts.createServer;
     }
 
+    // undo the listen override
+    delete app.listen;
+
     app._server = createServer( function(req, res, whenDone) {
         var self = app;
         // assign instance vars, else param parsing stores by reference into the parent!
@@ -143,7 +151,7 @@ Restiq.createServer = function createServer( opts ) {
             }
             else {
                 // restify compat: only run those mw steps that existed when the route was added
-                self._before.len = route._route.steps;
+                self._before.limit = route._route.steps;
 
                 middlewareStack = concatArrays(
                     self._before,
@@ -190,7 +198,7 @@ Restiq.prototype.close = function close( cb ) {
 function concatArrays( /* VARARGS */ ) {
     var i, j, dst = new Array(), nargs = arguments.length;
     for (i=0; i<nargs; i++) {
-        var arr = arguments[i], len = arr.len || arr.length;
+        var arr = arguments[i], len = arr.limit || arr.length;
         for (j=0; j<len; j++) dst.push(arr[j]);
     }
     return dst;
